[package]
name = "openxr_mndx_xdev_space"
version = "0.1.1"
edition = "2024"
license = "BSL-1.0"
keywords = ["openxr", "monado", "vr", "xr", "fbt"]
description = "Rust OpenXR bindings for the `XR_MNDX_xdev_space` Extension"
repository = "https://github.com/Schmarni-Dev/openxr_mndx_xdev_space"

[dependencies]
openxr = { version = "0.19.0", default-features = false }
